# lido-python-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  cpuinfo.sh  environment.devenv.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/actions/: update_blst.yml
.github/workflows/: compile_blst.yml  devenv.yml  formatting.yml  linux.yml  osx.yml  publish.yml  windows.yml
blst-lib/: .gitignore  blst_wrap.cpp
blst-lib/windows/: blst.lib
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  mypackage.foo.rst  mypackage.rst  requirements_rtd.txt
lido/: __init__.py  calldata.py  chunks.py  eth2.py  foo.py  lido.py  main.py  operators.py  w3.py
lido/blstverify/: __init__.py  blst.py  test.py  verifier.py
lido/constants/: abi.py  addresses.py  chains.py  contracts.py  eth2.py  multicall.py  workers.py
lido/contract/: __init__.py  contract.py  contracts.py  execute_contract.py  load_contract.py
lido/eth2deposit/: ssz.py
lido/methods/: __init__.py  keys.py  operators.py  stats.py  typing.py
lido/multicall/: __init__.py  multicall.py  multicall_address.py
lido/network/: __init__.py  address.py  type.py  (+1 more)
lido_sdk/: __init__.py  config.py  lido.py
mypackage/: foo.py
tests/: example_test.py  fixtures.py  test_blst_verifier.py  test_chunks.py  test_contracts.py  test_foo.py  test_lido.py  test_multicall.py  test_operators.py  test_validation.py  test_w3.py  utils.py
(+25 files in other folders)
