[tool.poetry]
name = "lido-sdk"
version = "2.6.0"
description = "This library consolidates various functions to efficiently load network data for Lido, validate node operator keys and find key duplicates."
authors = ["Lido <info@lido.fi>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.4"
multicall = ">=0.1.3,<0.5.0"
web3 = "^5.23.1"
ssz = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
wheel = "^0.37.0"
twine = "^3.4.2"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"
